--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,7 @@ img{width: 15%;}
 main{background-color:  rgb(3, 55, 114); padding: 25px;}
 
 h3{color: white ;      text-align: center;font-size: 25px;}
-H4{color: cyan; font-size: 20px;}
+H4{color:red; font-size: 20px;}
 p {font-size: 15px; }
 
 footer {background-color: black; color: blue; text-align:right; height:40px ;}
