--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,10 +10,10 @@ main{background-color:  rgb(3, 55, 114); padding: 25px;}
 
 h3{color: white ;      text-align: center;font-size: 25px;}
 H4{color:cyan; font-size: 20px;}
-p {font-size: 15px; }
+p {font-size: 15px; font-family: Arial, Helvetica, sans-serif; }
 
 footer {background-color: black; color: blue; text-align:right; height:40px ;}
-#f{font-size: 12px;vertical-align: center;font-family: monospace;}
+#f{font-size: 12px;vertical-align: center;font-family: monospace;font-style: oblique;}
 
 p {margin: 0;}
 
