--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,12 +8,12 @@ img{width: 15%;}
 
 main{background-color:  rgb(3, 55, 114); padding: 25px;}
 
-h3{color: white ;      text-align: center;font-size: 25px;}
+h3{color: white ; text-align: center;font-size: 22px;}
 H4{color:cyan; font-size: 20px;}
 p {font-size: 15px; font-family: Arial, Helvetica, sans-serif; }
 
-footer {background-color: black; color: blue; text-align:right; height:40px ;}
-#f{font-size: 12px;vertical-align: center;font-family: monospace;font-style: oblique;}
+footer {background-color: black; color: white; text-align:right; height:40px ;}
+#f{font-size: 10px;vertical-align: center;font-family: monospace;font-style: oblique;}
 
 p {margin: 0;}
 
