--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,3 +21,9 @@ div {
     width: 80%; margin:auto;
 }
 
+@media only screen and (max-width: 600px) {
+   h2{font-size: 23;}
+   h3{font-size: 20;}
+   h4{font-size: 18;}
+   p{font-size: 13;}
+  }
